[package]
name = "bear_rs"
version = "0.1.0"
edition = "2021"
authors = ["winliyou@outlook.com"]

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive"] }
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
